重构app锁屏计划

--- a/FocusLock/app/src/main/res/values-zh/strings.xml
+++ b/FocusLock/app/src/main/res/values-zh/strings.xml
@@ -40,8 +40,19 @@
     <string name="restriction_app_not_allowed">该应用暂停至 %1$s</string>
     <string name="restriction_requires_whitelist">白名单为空。请先添加允许的应用。</string>
     <string name="restriction_requires_apps">启用计划前请至少选择一个应用。</string>
+    <string name="restriction_requires_slots">启用计划前请至少添加一个时间段。</string>
     <string name="select_days_hint">至少选择一天</string>
     <string name="select_apps_hint">至少选择一个应用</string>
+    <string name="slot_requires_days">请选择该时间段的重复日期。</string>
+    <string name="add_time_slot_button">添加时间段</string>
+    <string name="selected_slot_count_default">时间段：0</string>
+    <string name="selected_slot_count_format">时间段：%1$d</string>
+    <string name="slot_empty_hint">至少需要一个时间段。</string>
+    <string name="slot_edit_hint">点击下方时间段即可编辑并加载到上方选择器。</string>
+    <string name="no_time_slots">暂无时间段</string>
+    <string name="slot_count_label">%1$d 个时间段</string>
+    <string name="slot_summary_line">- %1$s (%2$s)</string>
+    <string name="remove_slot_content_description">删除该时间段</string>
     <string name="restriction_available_in">%1$s 后可用</string>
     <string name="disable_plan_to_edit">编辑前请先禁用此计划。</string>
     <string name="disable_restriction_to_edit">编辑前请关闭此限制。</string>
@@ -110,7 +121,7 @@
     <string name="reminder_completed_floating_group_title">已完成的任意时间提醒</string>
     <string name="reminder_end_toggle">结束时间</string>
     <string name="reminder_end_required">请选择结束日期和时间</string>
-    <string name="reminder_no_end_time">无结束</string>
+    <string name="reminder_no_end_time"></string>
     <string name="lock_force_unlock_confirm">立即解锁并停用当前锁定？</string>
     <string name="lock_force_unlock_unavailable">本周的强制解锁次数已用完，请稍后再试。</string>
     <string-array name="reminder_recurrence_entries">
