--- a/FocusLock/app/src/main/res/values/strings.xml
+++ b/FocusLock/app/src/main/res/values/strings.xml
@@ -40,8 +40,19 @@
     <string name="restriction_app_not_allowed">This app is paused until %1$s</string>
     <string name="restriction_requires_whitelist">Whitelist is empty. Add allowed apps first.</string>
     <string name="restriction_requires_apps">Add at least one app before enabling this plan.</string>
+    <string name="restriction_requires_slots">Add at least one time slot to enable this plan.</string>
     <string name="select_days_hint">Select at least one day</string>
     <string name="select_apps_hint">Select at least one app</string>
+    <string name="slot_requires_days">Select at least one day for this time slot.</string>
+    <string name="add_time_slot_button">Add time slot</string>
+    <string name="selected_slot_count_default">Time slots: 0</string>
+    <string name="selected_slot_count_format">Time slots: %1$d</string>
+    <string name="slot_empty_hint">Add at least one time slot.</string>
+    <string name="slot_edit_hint">Tap a time slot to edit it. It will load into the pickers above.</string>
+    <string name="no_time_slots">No time slots</string>
+    <string name="slot_count_label">%1$d time slots</string>
+    <string name="slot_summary_line">- %1$s (%2$s)</string>
+    <string name="remove_slot_content_description">Remove this time slot</string>
     <string name="restriction_available_in">Ready in %1$s</string>
     <string name="disable_plan_to_edit">Disable this plan before editing.</string>
     <string name="disable_restriction_to_edit">Turn this restriction off before editing.</string>
